[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = "4.4.1"
dirs = "5.0.1"
configparser = "3.0.2"

[[bin]]
name = "service"
path = "src/main.rs"